--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,10 @@ li {
     align-items: center;
 }
 
+li.completed {
+    text-decoration: line-through;
+}
+
 button {
     padding: 10px 20px;
     margin-top: 20px;
@@ -60,10 +64,4 @@ button {
     color: black;
     text-decoration: none;
     cursor: pointer;
-}
-
-select {
-    margin-bottom: 20px;
-    padding: 10px;
-    font-size: 16px;
 }
