--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,28 @@ body {
     font-family: Arial, sans-serif;
 }
 
+header {
+    background-color: #333;
+    padding: 10px 0;
+}
+
+header nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+header nav ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
+header nav ul li a {
+    color: white;
+    text-decoration: none;
+}
+
 .container {
     text-align: center;
     padding: 20px;
@@ -75,6 +97,21 @@ textarea {
     width: 100%;
     height: 100px;
     margin-top: 10px;
+}
+
+form {
+    margin: 20px 0;
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    box-sizing: border-box;
+}
+
+.error {
+    color: red;
 }
 
 @media (max-width: 600px) {
